Model completed (not tested). Added initial animation for the GTE.

--- a/index.html
+++ b/index.html
@@ -3,9 +3,28 @@
 <head>
     <meta charset="UTF-8">
     <title>GTE</title>
-</head>
-<body>
+
+    <link rel="stylesheet" href="site.css"/>
     <script src="lib/phaser.js"></script>
     <script src="lib/jquery-3.1.1.js"></script>
+    <script src="src/Model/NodeType.js"></script>
+    <script src="src/Model/MoveType.js"></script>
+    <script src="src/Model/Player.js"></script>
+    <script src="src/Model/Node.js"></script>
+    <script src="src/Model/Move.js"></script>
+    <script src="src/Model/ISet.js"></script>
+    <script src="src/Model/Payoff.js"></script>
+    <script src="src/Model/StrategicForm.js"></script>
+    <script src="src/Model/Tree.js"></script>
+    <script src="src/View/NodeView.js"></script>
+    <script src="src/View/MoveView.js"></script>
+    <script src="src/View/TreeView.js"></script>
+    <script src="src/Controller/Boot.js"></script>
+    <script src="src/Controller/MainScene.js"></script>
+    <script src="GTE.js"></script>
+</head>
+<body>
+    <div id="phaser-div"></div>
+    <div id="font1">.</div>
 </body>
 </html>
