Added the Main Scene, a sample NodeView and most importantly the event system! You can try to hover (in or out) or click, and you will get the operation and the Node currently operated on. Also made some minor changes and fixed some bugs in the model.

--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
     <link rel="stylesheet" href="site.css"/>
     <script src="lib/phaser.js"></script>
     <script src="lib/jquery-3.1.1.js"></script>
+
+    <script src="src/Utils/Constants.js"></script>
     <script src="src/Model/NodeType.js"></script>
     <script src="src/Model/MoveType.js"></script>
     <script src="src/Model/Player.js"></script>
