Added a very simple treeview drawing. This will be extended a lot later. The tree is also centered. Next up: adding nodes and node events.

--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
     <script src="src/Model/Payoff.js"></script>
     <script src="src/Model/StrategicForm.js"></script>
     <script src="src/Model/Tree.js"></script>
+    <script src="src/View/TreeViewProperties.js"></script>
     <script src="src/View/NodeView.js"></script>
     <script src="src/View/MoveView.js"></script>
     <script src="src/View/TreeView.js"></script>
