Added node hover and tree construction (whoop whoop)! Bug1: Moves are visible over nodes on hover. This will be fixed easily. Bug2: There is no scaling at the moment, but it will be easy to setup with the current structure. Bug3: There is a small memory leak which will be looked at next. Bug4: Sometimes a node jumps to a different position.

--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
     <script src="src/View/MoveView.js"></script>
     <script src="src/View/TreeView.js"></script>
     <script src="src/Controller/Boot.js"></script>
+    <script src="src/Controller/TreeController.js"></script>
     <script src="src/Controller/MainScene.js"></script>
     <script src="GTE.js"></script>
 </head>
