--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <script src="lib/jquery-3.1.1.js"></script>
 
     <script src="src/Utils/Constants.js"></script>
+    <script src="src/Utils/SelectionRectangle.js"></script>
     <script src="src/Model/NodeType.js"></script>
     <script src="src/Model/MoveType.js"></script>
     <script src="src/Model/Player.js"></script>
