--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
     <script src="src/View/MoveView.js"></script>
     <script src="src/View/TreeView.js"></script>
     <script src="src/Controller/Boot.js"></script>
+    <script src="src/Controller/KeyboardController.js"></script>
     <script src="src/Controller/TreeController.js"></script>
     <script src="src/Controller/MainScene.js"></script>
     <script src="GTE.js"></script>
