--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 
     <script src="src/Utils/Constants.js"></script>
     <script src="src/Utils/SelectionRectangle.js"></script>
+    <script src="src/Utils/ObjectCloner.js"></script>
     <script src="src/Model/Player.js"></script>
     <script src="src/Model/Node.js"></script>
     <script src="src/Model/Move.js"></script>
