Created error-pop up on information set creation. Style can be changed.

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <script src="src/Utils/Constants.js"></script>
     <script src="src/Utils/SelectionRectangle.js"></script>
     <script src="src/Utils/ObjectCloner.js"></script>
+    <script src="src/Utils/ErrorPopUp.js"></script>
     <script src="src/Model/Player.js"></script>
     <script src="src/Model/Node.js"></script>
     <script src="src/Model/Move.js"></script>
