Re-factoring done. Sample ISet has been created. To be discussed...

--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
     <script src="src/View/TreeViewProperties.js"></script>
     <script src="src/View/NodeView.js"></script>
     <script src="src/View/MoveView.js"></script>
+    <script src="src/View/ISetView.js"></script>
     <script src="src/View/TreeView.js"></script>
     <script src="src/Controller/Boot.js"></script>
     <script src="src/Controller/KeyboardController.js"></script>
