--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <script src="src/Utils/SelectionRectangle.js"></script>
     <script src="src/Utils/ObjectCloner.js"></script>
     <script src="src/Utils/ErrorPopUp.js"></script>
+    <script src="src/Utils/TreeTweenManager.js"></script>
     <script src="src/Model/Player.js"></script>
     <script src="src/Model/Node.js"></script>
     <script src="src/Model/Move.js"></script>
