Fixed a couple of bugs with undo/redo. Added logic for iSets deletion and node addition.

--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
     <script src="src/View/ISetView.js"></script>
     <script src="src/View/TreeView.js"></script>
     <script src="src/Controller/Boot.js"></script>
+    <script src="src/Controller/UserActionController.js"></script>
     <script src="src/Controller/KeyboardController.js"></script>
     <script src="src/Controller/UndoRedoController.js"></script>
     <script src="src/Controller/TreeController.js"></script>
