Started adding hover button logic.

--- a/index.html
+++ b/index.html
@@ -13,6 +13,8 @@
     <script src="src/Utils/ObjectCloner.js"></script>
     <script src="src/Utils/ErrorPopUp.js"></script>
     <script src="src/Utils/TreeTweenManager.js"></script>
+    <script src="src/Utils/HoverMenuManager.js"></script>
+    <script src="src/Utils/HoverButton.js"></script>
     <script src="src/Model/Player.js"></script>
     <script src="src/Model/Node.js"></script>
     <script src="src/Model/Move.js"></script>
