Started adding (editable)labels logic

--- a/index.html
+++ b/index.html
@@ -37,6 +37,7 @@
 </head>
 <body>
     <div id="phaser-div"></div>
+    <!--<div class="vaseka-baby" style="background: black;width: 200px; height: 200px; position: absolute"></div>-->
     <div id="font1">.</div>
 </body>
 </html>
