Removed Object Cloner (external package) for cloning the tree. Serialization of the tree is done -> undo-redo is now done differently (and should work), new tree, save, load and save image are also done.

--- a/index.html
+++ b/index.html
@@ -6,15 +6,19 @@
 
     <link rel="stylesheet" href="site.css"/>
     <script src="lib/phaser.js"></script>
-    <script src="lib/jquery-3.1.1.js"></script>
+
+    <script src="lib/jquery-3.2.1.min.js"></script>
+    <script src="lib/FileSaver.js"></script>
+
+    <script src="src/Menus/TopMenu/TopMenu.js"></script>
 
     <script src="src/Utils/Constants.js"></script>
     <script src="src/Utils/SelectionRectangle.js"></script>
-    <script src="src/Utils/ObjectCloner.js"></script>
     <script src="src/Utils/ErrorPopUp.js"></script>
     <script src="src/Utils/TreeTweenManager.js"></script>
     <script src="src/Utils/HoverMenuManager.js"></script>
     <script src="src/Utils/HoverButton.js"></script>
+    <script src="src/Utils/TreeParser.js"></script>
     <script src="src/Model/Player.js"></script>
     <script src="src/Model/Node.js"></script>
     <script src="src/Model/Move.js"></script>
@@ -36,7 +40,7 @@
     <script src="GTE.js"></script>
 </head>
 <body>
-    <div id="phaser-div"></div>
+<div id="phaser-div"></div>
     <!--<div class="vaseka-baby" style="background: black;width: 200px; height: 200px; position: absolute"></div>-->
     <div id="font1">.</div>
 </body>
