--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <script src="lib/FileSaver.js"></script>
 
     <script src="src/Menus/TopMenu/TopMenu.js"></script>
+    <script src="src/Menus/LabelInput/LabelInput.js"></script>
 
     <script src="src/Utils/Constants.js"></script>
     <script src="src/Utils/SelectionRectangle.js"></script>
@@ -25,6 +26,7 @@
     <script src="src/Model/ISet.js"></script>
     <script src="src/Model/Payoff.js"></script>
     <script src="src/Model/StrategicForm.js"></script>
+    <script src="src/Model/LabelSetter.js"></script>
     <script src="src/Model/Tree.js"></script>
     <script src="src/View/TreeViewProperties.js"></script>
     <script src="src/View/NodeView.js"></script>
@@ -42,6 +44,6 @@
 <body>
 <div id="phaser-div"></div>
     <!--<div class="vaseka-baby" style="background: black;width: 200px; height: 200px; position: absolute"></div>-->
-    <div id="font1">.</div>
+    <div id="bug-fixer">.</div>
 </body>
 </html>
