edit now works fully on player names and move names. Moving on to players adding and removing and payoffs (which are connected)

--- a/src/Menus/TopMenu/top-menu.html
+++ b/src/Menus/TopMenu/top-menu.html
@@ -2,17 +2,27 @@
     <div id="logo-wrapper">
         <img src="src/Assets/Images/TopMenu/logo.png" class="top-menu-logo">
     </div>
-    <div id="new-wrapper" class="file-button-wrapper">
+    <div id="new-wrapper" class="button-wrapper">
         <img src="src/Assets/Images/TopMenu/file.png" class="top-menu-img">
     </div>
-    <div id="save-wrapper" class="file-button-wrapper">
+    <div id="save-wrapper" class="button-wrapper">
         <img src="src/Assets/Images/TopMenu/save.png" class="top-menu-img">
     </div>
-    <div id="load-wrapper" class="file-button-wrapper">
+    <div id="load-wrapper" class="button-wrapper">
         <img src="src/Assets/Images/TopMenu/upload.png" class="top-menu-img">
     </div>
-    <div id="save-image-wrapper" class="file-button-wrapper">
+    <div id="save-image-wrapper" class="button-wrapper">
         <img src="src/Assets/Images/TopMenu/saveImage.png" class="top-menu-img">
     </div>
     <input type="file" id="input-load" accept="text/plain">
+    <div id="minusP-wrapper" class="button-wrapper">
+        <img src="src/Assets/Images/TopMenu/minus.png" class="top-menu-img">
+    </div>
+    <div class="player-number-wrapper button-wrapper">
+        <img src="src/Assets/Images/TopMenu/user.png" class="player">
+        <div class="player-number">2</div>
+    </div>
+    <div id="plusP-wrapper" class="button-wrapper">
+        <img src="src/Assets/Images/TopMenu/plus.png" class="top-menu-img">
+    </div>
 </div>
