Added players in the top menu. Fixed a couple of small structural problems.

--- a/src/Menus/TopMenu/top-menu.html
+++ b/src/Menus/TopMenu/top-menu.html
@@ -20,7 +20,7 @@
     </div>
     <div class="player-number-wrapper button-wrapper">
         <img src="src/Assets/Images/TopMenu/user.png" class="player">
-        <div class="player-number">2</div>
+        <div id="player-number">2</div>
     </div>
     <div id="plusP-wrapper" class="button-wrapper">
         <img src="src/Assets/Images/TopMenu/plus.png" class="top-menu-img">
