--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     <script src="src/Model/Node.js"></script>
     <script src="src/Model/Move.js"></script>
     <script src="src/Model/ISet.js"></script>
-    <script src="src/Model/Payoff.js"></script>
+    <script src="src/Model/Payoffs.js"></script>
     <script src="src/Model/StrategicForm.js"></script>
     <script src="src/Model/LabelSetter.js"></script>
     <script src="src/Model/Tree.js"></script>
