Added the following. 1-player games Signs + and - with opacity if inactive Undo-Redo Icons (opacity for now does not work when using the keyboard)

--- a/src/Menus/TopMenu/top-menu.html
+++ b/src/Menus/TopMenu/top-menu.html
@@ -1,3 +1,4 @@
+<!--suppress ALL -->
 <div id="top-container">
     <div id="logo-wrapper">
         <img src="src/Assets/Images/TopMenu/logo.png" class="top-menu-logo">
@@ -24,5 +25,11 @@
     </div>
     <div id="plusP-wrapper" class="button-wrapper">
         <img src="src/Assets/Images/TopMenu/plus.png" class="top-menu-img">
+    </div>
+    <div id="undo-wrapper" class="button-wrapper">
+        <img src="src/Assets/Images/TopMenu/undo.png" class="top-menu-img">
+    </div>
+    <div id="redo-wrapper" class="button-wrapper">
+        <img src="src/Assets/Images/TopMenu/redo.png" class="top-menu-img">
     </div>
 </div>
