--- a/src/Menus/TopMenu/top-menu.html
+++ b/src/Menus/TopMenu/top-menu.html
@@ -5,15 +5,19 @@
     </div>
     <div id="new-wrapper" class="button-wrapper">
         <img src="src/Assets/Images/TopMenu/file.png" class="top-menu-img">
+        <span class="tooltip">New Tree</span>
     </div>
     <div id="save-wrapper" class="button-wrapper">
         <img src="src/Assets/Images/TopMenu/save.png" class="top-menu-img">
+        <span class="tooltip">Save .txt Tree </span>
     </div>
     <div id="load-wrapper" class="button-wrapper">
         <img src="src/Assets/Images/TopMenu/upload.png" class="top-menu-img">
+        <span class="tooltip">Load .txt Tree</span>
     </div>
     <div id="save-image-wrapper" class="button-wrapper">
         <img src="src/Assets/Images/TopMenu/saveImage.png" class="top-menu-img">
+        <span class="tooltip">Save as .jpg</span>
     </div>
     <input type="file" id="input-load" accept="text/plain">
     <div id="minusP-wrapper" class="button-wrapper">
@@ -28,8 +32,23 @@
     </div>
     <div id="undo-wrapper" class="button-wrapper">
         <img src="src/Assets/Images/TopMenu/undo.png" class="top-menu-img">
+        <span class="tooltip">Undo</span>
     </div>
     <div id="redo-wrapper" class="button-wrapper">
         <img src="src/Assets/Images/TopMenu/redo.png" class="top-menu-img">
+        <span class="tooltip">New File</span>
+    </div>
+    <div id="random-payoffs-wrapper" class="button-wrapper">
+        <img src="src/Assets/Images/TopMenu/randomPayoffs.png" class="top-menu-img">
+        <span class="tooltip">Random Payoffs</span>
+    </div>
+    <div id="zero-sum-wrapper" class="button-wrapper">
+        <img src="src/Assets/Images/TopMenu/zeroSum.png" class="top-menu-img">
+        <!--<img src="src/Assets/Images/TopMenu/redo.png" class="top-menu-img">-->
+        <span class="tooltip">Zero Sum Toggle</span>
+    </div>
+    <div id="fraction-decimal-wrapper" class="button-wrapper">
+        <img src="src/Assets/Images/TopMenu/fraction.png" class="top-menu-img">
+        <span class="tooltip">Fraction/Decimal</span>
     </div>
 </div>
