StrategicFormView almost done

--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
     <script src="src/Utils/TreeTweenManager.js"></script>
     <script src="src/Utils/HoverButton.js"></script>
     <script src="src/Utils/TreeParser.js"></script>
+    <script src="src/Utils/SCell.js"></script>
     <script src="src/Model/Player.js"></script>
     <script src="src/Model/Node.js"></script>
     <script src="src/Model/Move.js"></script>
@@ -26,12 +27,14 @@
     <script src="src/Model/Payoffs.js"></script>
     <script src="src/Model/StrategicForm.js"></script>
     <script src="src/Model/LabelSetter.js"></script>
+    <script src="src/Model/StrategicForm.js"></script>
     <script src="src/Model/Tree.js"></script>
     <script src="src/View/TreeViewProperties.js"></script>
     <script src="src/View/NodeView.js"></script>
     <script src="src/View/MoveView.js"></script>
     <script src="src/View/ISetView.js"></script>
     <script src="src/View/TreeView.js"></script>
+    <script src="src/View/StrategicFormView.js"></script>
     <script src="src/Controller/Boot.js"></script>
     <script src="src/Controller/HoverMenuController.js"></script>
     <script src="src/Controller/UserActionController.js"></script>
@@ -43,7 +46,7 @@
 </head>
 <body>
 <div id="phaser-div"></div>
-    <!--<div class="vaseka-baby" style="background: black;width: 200px; height: 200px; position: absolute"></div>-->
+
     <div id="bug-fixer">.</div>
 </body>
 </html>
