Started fixing old bugs and stuff.

--- a/src/Menus/TopMenu/top-menu.html
+++ b/src/Menus/TopMenu/top-menu.html
@@ -43,11 +43,14 @@
         <span class="tooltip">Random Payoffs</span>
     </div>
     <div id="zero-sum-wrapper" class="button-wrapper">
-        <img src="src/Assets/Images/TopMenu/zeroSum.png" class="top-menu-img">
+        <img src="src/Assets/Images/TopMenu/nonZeroSum.png" class="top-menu-img">
         <span class="tooltip">Zero Sum Toggle</span>
     </div>
     <div id="fraction-decimal-wrapper" class="button-wrapper">
-        <img src="src/Assets/Images/TopMenu/decimal.png" class="top-menu-img">
+        <img src="src/Assets/Images/TopMenu/fraction.png" class="top-menu-img">
         <span class="tooltip">Fraction/Decimal</span>
+    </div>
+    <div id="strat-form-wrapper" class="button-wrapper">
+        <button class="top-menu-img">STRATEGIC FORM</button>
     </div>
 </div>
