Major bugs with information sets fixed. Strategic form dragging, zooming in and out implemented. Various menus added. Settings for tree width and height added. Fixed memory leak with information sets etc....

--- a/src/Menus/TopMenu/top-menu.html
+++ b/src/Menus/TopMenu/top-menu.html
@@ -86,9 +86,6 @@
             <div class="section-text">
                 <div class="explain">Adds children to selected nodes</div>
             </div>
-            <div class="section-video">
-                <div class="video"></div>
-            </div>
         </div>
         <div id="delete" class="row">
             <div class="section-hotkey">
@@ -96,9 +93,6 @@
             </div>
             <div class="section-text">
                 <div class="explain">Deletes all children from the selected nodes. If a node has no children, then it is removed</div>
-            </div>
-            <div class="section-video">
-                <div class="video"></div>
             </div>
         </div>
         <div id="one-four" class="row">
@@ -108,9 +102,6 @@
             <div class="section-text">
                 <div class="explain">Assigns the corresponding player to the selected nodes</div>
             </div>
-            <div class="section-video">
-                <div class="video"></div>
-            </div>
         </div>
         <div id="zero-or-c" class="row">
             <div class="section-hotkey">
@@ -118,9 +109,6 @@
             </div>
             <div class="section-text">
                 <div class="explain">Converts the selected nodes to chance nodes</div>
-            </div>
-            <div class="section-video">
-                <div class="video"></div>
             </div>
         </div>
         <div id="i" class="row">
@@ -130,9 +118,6 @@
             <div class="section-text">
                 <div class="explain">Creates an information set with the selected nodes, if possible</div>
             </div>
-            <div class="section-video">
-                <div class="video"></div>
-            </div>
         </div>
         <div id="u" class="row">
             <div class="section-hotkey">
@@ -140,9 +125,6 @@
             </div>
             <div class="section-text">
                 <div class="explain">Unlinks/removes information sets from the selected nodes</div>
-            </div>
-            <div class="section-video">
-                <div class="video"></div>
             </div>
         </div>
         <div id="c" class="row">
@@ -152,9 +134,6 @@
             <div class="section-text">
                 <div class="explain">Cuts information sets</div>
             </div>
-            <div class="section-video">
-                <div class="video"></div>
-            </div>
         </div>
         <div id="enter" class="row">
             <div class="section-hotkey">
@@ -162,9 +141,6 @@
             </div>
             <div class="section-text">
                 <div class="explain">Saves the label text and moves to the next label</div>
-            </div>
-            <div class="section-video">
-                <div class="video"></div>
             </div>
         </div>
         <div id="tab" class="row">
@@ -174,9 +150,6 @@
             <div class="section-text">
                 <div class="explain">Moves to the next label in editing mode</div>
             </div>
-            <div class="section-video">
-                <div class="video"></div>
-            </div>
         </div>
         <div id="shift-tab" class="row">
             <div class="section-hotkey">
@@ -184,9 +157,6 @@
             </div>
             <div class="section-text">
                 <div class="explain">Moves to the previous label in editing mode</div>
-            </div>
-            <div class="section-video">
-                <div class="video"></div>
             </div>
         </div>
         <div id="esc" class="row">
@@ -196,41 +166,29 @@
             <div class="section-text">
                 <div class="explain">Exits the label editing mode</div>
             </div>
-            <div class="section-video">
-                <div class="video"></div>
-            </div>
         </div>
-        <div id="s" class="row">
+        <div id="alt-n" class="row">
             <div class="section-hotkey">
-                <div class="hotkey">s</div>
-            </div>
-            <div class="section-text">
-                <div class="explain">Toggles the zero-sum option</div>
-            </div>
-            <div class="section-video">
-                <div class="video"></div>
-            </div>
-        </div>
-        <div id="ctrl-n" class="row">
-            <div class="section-hotkey">
-                <div class="hotkey">ctrl+n</div>
+                <div class="hotkey">alt+n</div>
             </div>
             <div class="section-text">
                 <div class="explain">Starts a new tree</div>
             </div>
-            <div class="section-video">
-                <div class="video"></div>
+        </div>
+        <div id="alt-s" class="row">
+            <div class="section-hotkey">
+                <div class="hotkey">alt+s</div>
+            </div>
+            <div class="section-text">
+                <div class="explain">Saves a tree into a .txt file</div>
             </div>
         </div>
-        <div id="ctrl-i" class="row">
+        <div id="alt-i" class="row">
             <div class="section-hotkey">
-                <div class="hotkey">ctrl+i</div>
+                <div class="hotkey">alt+i</div>
             </div>
             <div class="section-text">
                 <div class="explain">Saves the tree into a .jpg image</div>
-            </div>
-            <div class="section-video">
-                <div class="video"></div>
             </div>
         </div>
         <div id="ctrl-z" class="row">
@@ -240,9 +198,6 @@
             <div class="section-text">
                 <div class="explain">Undo</div>
             </div>
-            <div class="section-video">
-                <div class="video"></div>
-            </div>
         </div>
         <div id="ctrl-shift-z" class="row">
             <div class="section-hotkey">
@@ -251,21 +206,16 @@
             <div class="section-text">
                 <div class="explain">Redo</div>
             </div>
-            <div class="section-video">
-                <div class="video"></div>
+        </div>
+        <div id="arrow-keys" class="row">
+            <div class="section-hotkey">
+                <div class="hotkey">&uarr; &darr; &larr; &rarr; </div>
+            </div>
+            <div class="section-text">
+                <div class="explain">Manually reposition selected nodes</div>
             </div>
         </div>
-        <!--<div id="f2" class="row">-->
-        <!--<div class="section-hotkey">-->
-        <!--<div class="hotkey">F2</div>-->
-        <!--</div>-->
-        <!--<div class="section-text">-->
-        <!--<div class="explain">VASEKA E PICHAGA</div>-->
-        <!--</div>-->
-        <!--<div class="section-video">-->
-        <!--<div class="video"></div>-->
-        <!--</div>-->
-        <!--</div>-->
+
     </div>
     <div class="settings-menu-container">
         <div class="title">Tree Width</div>
