Fixed final bugs. All is done :)

--- a/src/Menus/TopMenu/top-menu.html
+++ b/src/Menus/TopMenu/top-menu.html
@@ -36,7 +36,7 @@
     </div>
     <div id="redo-wrapper" class="button-wrapper">
         <img src="src/Assets/Images/TopMenu/redo.png" class="top-menu-img">
-        <span class="tooltip">New File</span>
+        <span class="tooltip">Redo</span>
     </div>
     <div id="random-payoffs-wrapper" class="button-wrapper">
         <img src="src/Assets/Images/TopMenu/randomPayoffs.png" class="top-menu-img">
