--- a/src/Menus/TopMenu/top-menu.html
+++ b/src/Menus/TopMenu/top-menu.html
@@ -51,7 +51,9 @@
         <img src="src/Assets/Images/TopMenu/fraction.png" class="top-menu-img">
         <span class="tooltip">Fraction/Decimal</span>
     </div>
-    <button id="strat-form-button" class="button-wrapper">STRATEGIC FORM</button>
+    <button id="strat-form-button" class="button-wrapper text-button">STRATEGIC FORM</button>
+
+    <button id="solve-form-button" class="button-wrapper text-button">SOLVE</button>
 
     <div id="settings-button-wrapper" class="button-wrapper">
         <img src="src/Assets/Images/TopMenu/settings.png" class="top-menu-img">
@@ -68,6 +70,19 @@
         <span class="tooltip">Information</span>
     </div>
 
+    <div id="solution-container" class="main-container">
+        <div class="close-button" id="close-solution">
+            <img src="src/Assets/Images/TopMenu/close-info.png" class="close-img" >
+        </div>
+        <div id="title" class="row">
+            <div class="section-text">
+                <div class="explain">SOLUTION</div>
+            </div>
+        </div>
+        <div id="solution-text">
+
+        </div>
+    </div>
 
     <div id="info-container" class="main-container">
         <div class="close-button" id="close-info">
